08/20/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed CGDB/TGDB bug. The file dialog window works when the inferior
	was compiled without debug.

08/19/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed CGDB/TGDB bug. Breakpoints are now displayed in CGDB window.

08/17/2003 Bob Rossi <bob@brasko.net>

	* configure.in: Changed version number to 0.3.4-cvs.
	* Makefile.am: added doxygen rule. Creates documentation.
	* release-todo.txt: added line that says to change version number in
	doxygen config files.

version 0.3.4 (08/14/2003):

08/14/2003 Bob Rossi <bob@brasko.net>
    
	* configure.in: Changed version number to 0.3.4 for release
	* NEWS: Added new version number.

08/12/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with fix for prompt refresh problem after when
	^c is recieved after the file dialog has been opened.

08/12/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with ada highlighting string literal bug.

08/11/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with control_c bug fix.

08/01/2003 Bob Rossi <bob@brasko.net>
	
	* NEWS: Updating NEWS file with buffered control key libinput bug.

07/16/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with 'string literal' bug.

version 0.3.3a (07/16/2003):

07/15/2003 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Adding the 'cvs tag' command to list.
	Adding the README file to the website.
	* README: Removing the tabs from the README file

version 0.3.3 (07/15/2003):

07/15/2003 Bob Rossi <bob@brasko.net>

	* FAQ: Added bit about tty
    * Changed version number to 0.3.3 for release

07/14/2003 Bob Rossi <bob@brasko.net>

	* README: Removed old pgup,pgdn commands. Added vi style pgup,pgdn.
	* NEWS: Adding progress that should be noted in the NEWS file.

06/25/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed version number to 0.3.2-cvs for cvs development

version 0.3.2 (06/25/2003):

06/25/2003 Bob Rossi <bob_rossi@cox.com>
   