@@ -14,7 +14,15 @@
 #include "io.h"
 
 static int handle_source(struct annotate_two *a2, const char *buf,  size_t n, struct queue *q){
-   return commands_parse_source(a2->c, buf, n, q);
+   int ret = commands_parse_source(a2->c, buf, n, q);
+
+   /* This tells the annotate subsystem if the source annotation has been
+	* reached. This is important because if the source annotation has been 
+	* reached before tgdb is initialized, then the annotate subsystem doesn't
+	* have to probe gdb for the first file to open.
+	*/
+   a2->source_already_received = 1;
+   return ret;
 }
 
 static int handle_misc_pre_prompt(struct annotate_two *a2, const char *buf, size_t n, struct queue *q){
