@@ -1,5 +1,16 @@
 08/27/2003 Bob Rossi <bob@brasko.net>
 
+   * annotate_two.h: annotate_two, added first_prompt_reached and
+   source_already_received.
+   * a2-tgdb.c: initialize_annotate_two, initialized above new variables.
+   a2_initialize, don't probe for initial gdb file. Do that in data_set_state
+   * annotate.c: handle_source, set source_already_recieved to 1
+   * commands.c: Add comment about stupid source code.
+   * data.c: added function tgdb_initialize_annotation_state
+   data_set_state, added call to new function above.
+   
+08/27/2003 Bob Rossi <bob@brasko.net>
+
    * types.c: tgdb_print_item, knows how to print TGDB_UPDATE_FILE_POSITION
 
 08/20/2003 Bob Rossi <bob@brasko.net>
